--- a/VictoriaGotti02/ZoomExp300x600.html
+++ b/VictoriaGotti02/ZoomExp300x600.html
@@ -191,8 +191,8 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:16px; text-decoration: none;"> Victoria Gotti: <br>La hija de mi padre.</span><br>
-     <span class="ism_text ism_text_light" style="color:#000000; font-size:12px;  text-decoration: none; "><p  style="text-align: justify; width: 93%; margin-left: 13px; margin-top: -10px;">Victoria tenía un asiento de primera fila en una vida en la que el mundo quedó fascinado, todo mientras trataba de reconciliar al amoroso padre que adoraba con un hombre que el mundo exterior estaba decidido a derribar. Estreno exclusivo, sábado 15 de junio.</p></span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;"> Victoria Gotti: <br>La Hija de la Mafia.</span><br>
+     <span class="ism_text ism_text_light" style="color:#000000; font-size:12px;  text-decoration: none; "><p  style="text-align: justify; width: 93%; margin-left: 13px; margin-top: -10px;">Producida por la propia Victoria Gotti, esta Lifetime Movie nos lleva al mundo de cómo era realmente crecer como la hija del gran jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de ese mundo. Sábado 15 de Junio, 10PM.</p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
                         <p style=" line-height: 1em; margin-left: 15px; margin-top: -3px;">
@@ -204,7 +204,7 @@ a {text-decoration: none;}
 
                                        
                    </div>
-                   <div id="botones-para-compartir" style="display:inline;float:left;margin-top:14px;margin-left:8px;"><span>
+                   <div id="botones-para-compartir" style="display:inline;float:left;margin-top:10px;margin-left:8px;"><span>
 
                          <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lifetimeplay.tv/mx/lifetime-movies"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/WV1DSVZ.png" title="compartir en facebook" width="22" /></a>
