--- a/BCP2/300x600/01CtaDigitalVenetian300x600.html
+++ b/BCP2/300x600/01CtaDigitalVenetian300x600.html
@@ -2245,7 +2245,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">¿Ya conoces nuestra Cuenta Digital?</div>
+<div id="i50">¡En el BCP renovamos nuestras cuentas!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2355,7 +2355,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: ¿Ya conoces nuestra Cuenta Digital?; customName: false;
+name: ¡En el BCP renovamos nuestras cuentas!; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
