--- a/BCP2/300x600/02CtaIlimitadaZoomExp300x600.html
+++ b/BCP2/300x600/02CtaIlimitadaZoomExp300x600.html
@@ -204,7 +204,7 @@
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none; font-family: Trebuchet MS;">Realiza todas las operaciones que quieras.</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none; font-family: Trebuchet MS;">¡En el BCP renovamos nuestras cuentas!</span>
 
    <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:16px; font-family: Trebuchet MS;">
                         <p style="margin-top:  2px; line-height: 1em; margin-left: -5px; "></p>
