--- a/BCP2/300x600/03CtaIlimitadaVenetian300x600.html
+++ b/BCP2/300x600/03CtaIlimitadaVenetian300x600.html
@@ -2136,11 +2136,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.text.css:text/base/css*/
 #i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 276px; height: 74px;
-        -ms-transform: translate(0, 0) translate(12px, 486px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 486px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 486px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 486px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 74px;
+        -ms-transform: translate(0, 0) translate(26px, 495px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 495px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 495px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 495px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2245,7 +2245,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">¡Vive ilimitadamente y olvídate de los cobros adicionales!</div>
+<div id="i50">¡En el BCP renovamos nuestras cuentas!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2355,7 +2355,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: ¡Vive ilimitadamente y olvídate de los cobros adicionales!; customName: false;
+name: ¡En el BCP renovamos nuestras cuentas!; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
