--- a/VictoriaGotti02/ZoomExp300x600.html
+++ b/VictoriaGotti02/ZoomExp300x600.html
@@ -191,7 +191,7 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;"> Victoria Gotti: <br>La Hija de la Mafia.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:17px; text-decoration: none;"> Victoria Gotti: La Hija de la Mafia. Estreno esclusivo.</span><br>
      <span class="ism_text ism_text_light" style="color:#000000; font-size:12px;  text-decoration: none; "><p  style="text-align: justify; width: 93%; margin-left: 13px; margin-top: -10px;">Producida por la propia Victoria Gotti, esta Lifetime Movie nos lleva al mundo de cómo era realmente crecer como la hija del gran jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de ese mundo. Sábado 15 de Junio, 10PM.</p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
