--- a/ConforAuto/Venetian300x600.html
+++ b/ConforAuto/Venetian300x600.html
@@ -2334,7 +2334,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.com/neumaticos-coche/goodyear'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.com/neumaticos-coche/goodyear?utm_source=display_webads_1200_627&utm_medium=cpc&utm_campaign=goodyear_native_esp'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
