--- a/KOSHER SAN JACINTO HEB/Fade_300x250.html
+++ b/KOSHER SAN JACINTO HEB/Fade_300x250.html
@@ -71,7 +71,7 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/NctgXOz.jpg)
+            background-image: url(https://i.imgur.com/2tXrzy1.jpg)
         }
 
         .fadesmall .bg.cover-2 {
