--- a/KOSHER SAN JACINTO HEB/Venetian.html
+++ b/KOSHER SAN JACINTO HEB/Venetian.html
@@ -2271,7 +2271,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/KdYDF0K.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/Uqyv64e.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/xQ4xxW8.jpg"></dataimg>
 <!--#/#--><!--#i2.i45.slice-image.html:slice-image/html.1-->
@@ -2402,7 +2402,7 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: KdYDF0K.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Uqyv64e.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: xQ4xxW8.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i45.slice-image.meta:slice-image/meta.1*/
