--- a/ConfortAuto Portugués/Fijo300x250.html
+++ b/ConfortAuto Portugués/Fijo300x250.html
@@ -216,7 +216,7 @@
 </head>
 <body class="AmericanFijo" style="margin:0px;">
 	 <div class="te-container">
-        <a href="https://www.confortauto.pt/pneus-turismo/goodyear" target="_blank">
+        <a href="https://www.confortauto.pt/pneus-turismo/goodyear?utm_source=display_webads_1200_627&utm_medium=cpc&utm_campaign=goodyear_native_pt" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;"></span></div>
