--- a/ConfortAuto Portugués/Venetian300x250.html
+++ b/ConfortAuto Portugués/Venetian300x250.html
@@ -2333,7 +2333,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.pt/pneus-turismo/goodyear'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.pt/pneus-turismo/goodyear?utm_source=display_webads_1200_627&utm_medium=cpc&utm_campaign=goodyear_native_pt'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
