--- a/ConfortAuto Portugués/Venetian300x250.html
+++ b/ConfortAuto Portugués/Venetian300x250.html
@@ -2254,7 +2254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i52.text.html:text/html-->
-<div id="i52">Escolha o melhor com o profissionalismo dos centros Confortauto</div>
+<div id="i52">Escolha o melhor com o profissionalismo dos centros Confortauto.</div>
 <!--#/#--><!--#i50.text.html:text/html-->
 <div id="i50">A melhor escolha de pneus</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
