--- a/KOSHER SAN JACINTO HEB/Cube.html
+++ b/KOSHER SAN JACINTO HEB/Cube.html
@@ -837,7 +837,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i392.image.html:image/html-->
 <img id="i392" src="https://i.imgur.com/S7j9hS8.png"/>
 <!--#/#--><!--#i6.i394.text.html:text/html-->
-<div id="i394">Encuéntralo en H.E.B.</div>
+<div id="i394">Encuéntralo en HEB.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
