--- a/KOSHER SAN JACINTO HEB/Fade_320x480.html
+++ b/KOSHER SAN JACINTO HEB/Fade_320x480.html
@@ -326,7 +326,7 @@
         </div>
         <div class="bf_text"> 
             <span class="bf_text_title bf_text_bold">
-             Nueva línea Kosher, el sabor de confianza. <br> Encuéntrala en H.E.B.
+             Nueva línea Kosher, el sabor de confianza. <br> Encuéntrala en HEB.
             </br></span>
            
 
