--- a/KOSHER SAN JACINTO HEB/Venetian.html
+++ b/KOSHER SAN JACINTO HEB/Venetian.html
@@ -2265,7 +2265,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">El sabor de confianza. Encuéntralo en H.E.B.</div>
+<div id="i7">El sabor de confianza. Encuéntralo en HEB.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/S7j9hS8.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
