--- a/DISCOVERY/ANIMAL PLANET/ZoomExp300x600.html
+++ b/DISCOVERY/ANIMAL PLANET/ZoomExp300x600.html
@@ -202,7 +202,7 @@ a {text-decoration: none;}
 
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:19px; text-decoration: none;">Segundo a segundo, Animal Planet te describe el fantástico mundo animal. ¡No te lo puedes perder!</span>
     
-                  <div class="cta" > <img src="https://i.imgur.com/ZfyYb24.gif" style="height: 45px; margin-left: -35px;"></a></div>
+                  <div class="cta" > <img src="https://i.imgur.com/XUGwBjE.gif" style="height: 45px; margin-left: -35px;"></a></div>
 
                    <div class="cta2" > <img src="https://i.imgur.com/dZVtYGc.gif" style="height: 70px; margin-left: -30px;"></a></div>
 
