--- a/DISCOVERY/ANIMAL PLANET/Fade300x250.html
+++ b/DISCOVERY/ANIMAL PLANET/Fade300x250.html
@@ -310,7 +310,7 @@
             <div class="bzm_text"> <span class="bzm_text_title"><b>Animal Planet describe el fantástico mundo animal. ¡No te lo pierdas! </br></span>
                </div>
 
-                <div class="cta" > <img src="https://i.imgur.com/ZfyYb24.gif" style="height: 35px;"></div>
+                <div class="cta" > <img src="https://i.imgur.com/XUGwBjE.gif" style="height: 35px;"></div>
 
                 <div class="cta2" > <img src="https://i.imgur.com/dZVtYGc.gif" style="height: 60px;"></div>
 
