--- a/DISCOVERY/ANIMAL PLANET/Fade300x250.html
+++ b/DISCOVERY/ANIMAL PLANET/Fade300x250.html
@@ -307,7 +307,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>Animal Planet describe el fantástico mundo animal. ¡No te lo pierdas! </br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>Animal Planet descubre el fantástico mundo animal. ¡No te lo pierdas! </br></span>
                </div>
 
                 <div class="cta" > <img src="https://i.imgur.com/XUGwBjE.gif" style="height: 35px;"></div>
