--- a/DISCOVERY/ANIMAL PLANET/ZoomExp300x600.html
+++ b/DISCOVERY/ANIMAL PLANET/ZoomExp300x600.html
@@ -200,7 +200,7 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:19px; text-decoration: none;">Segundo a segundo, Animal Planet te descubre el fantástico mundo animal. ¡No te lo puedes perder!</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:19px; text-decoration: none;">Segundo a segundo, Animal Planet descubre el fantástico mundo animal. ¡No te lo puedes perder!</span>
     
                   <div class="cta" > <img src="https://i.imgur.com/XUGwBjE.gif" style="height: 45px; margin-left: -35px;"></a></div>
 
