--- a/BricoDepot/Fijo320x480-011.html
+++ b/BricoDepot/Fijo320x480-011.html
@@ -253,7 +253,7 @@
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
                          <span class="bzm_text_title  bzm_text_bold" style="color: #000;line-height:1.1; font-size:23px; text-align: center; margin-left:0px; margin-right:0px;">
-				Te presentamos los diferentes  tipos de barbacoas.
+				Te presentamos los diferentes  tipos de barbacoas
 						</span> 
                        
                         <span class="bzm_text_medium" style="color:#000; line-height:1.1em; font-size:17px; width:90%; text-align:center;">
