--- a/BCP2/300x600/05CtaIlimitadaZoomExp300x600.html
+++ b/BCP2/300x600/05CtaIlimitadaZoomExp300x600.html
@@ -184,7 +184,7 @@
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 480px; border-radius: none; cursor:pointer;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/2IGOkL6.jpg">
+      <img src="https://i.imgur.com/4pdEx2S.jpg">
       
     <li>
       <img src="https://i.imgur.com/DkaTv91.jpg">
