--- a/Miami Dade College/Cube.html
+++ b/Miami Dade College/Cube.html
@@ -914,7 +914,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">College graduates make an annual average of $17,500 more than their peers.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/TzsSOPi.jpg"/>
+<img id="i130" src="https://i.imgur.com/8T2rOT6.gif"/>
 <!--#/#--><!--#i4.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/LW2QnOR.png"/>
 <!--#/#--><!--#i4.i341.image.html:image/html-->
@@ -936,7 +936,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">You can make an average of 1 million dollars more overa lifetime if you have a Bachelor’s degree.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/ZETj2i9.jpg"/>
+<img id="i58" src="https://i.imgur.com/QNrTJvC.gif"/>
 <!--#/#--><!--#i5.i363.image.html:image/html-->
 <img id="i363" src="https://i.imgur.com/Xkkv09r.png"/>
 <!--#/#--><!--#i5.i369.image.html:image/html-->
@@ -958,7 +958,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">MDC offers an affordable option that’s close to home and easy to navigate.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/U8mDmQV.jpg"/>
+<img id="i60" src="https://i.imgur.com/IrQyOoL.gif"/>
 <!--#/#--><!--#i6.i385.image.html:image/html-->
 <img id="i385" src="https://i.imgur.com/Xkkv09r.png"/>
 <!--#/#--><!--#i6.i383.image.html:image/html-->
@@ -1061,7 +1061,7 @@ var el = document.getElementById('i345');
 
 el.addEventListener('click', function(e){
     /*#i351.i352.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=http://www.mdc.edu/academics/programs/bachelors.aspx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1140,7 +1140,7 @@ var el = document.getElementById('i403');
 
 el.addEventListener('click', function(e){
     /*#i405.i406.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=http://www.mdc.edu/academics/programs/bachelors.aspx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1219,7 +1219,7 @@ var el = document.getElementById('i391');
 
 el.addEventListener('click', function(e){
     /*#i393.i394.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=http://www.mdc.edu/academics/programs/bachelors.aspx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
