--- a/Miami Dade College/Venetian_300x600.html
+++ b/Miami Dade College/Venetian_300x600.html
@@ -2316,11 +2316,11 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/1AX7HrW.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/9ecjyFC.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/9ecjyFC.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/lD41x9L.jpg"></dataimg>
 <!--#/#--><!--#i2.i47.slice-image.html:slice-image/html.1-->
-<dataimg id="i47" src="https://i.imgur.com/tXUY4T1.jpg"></dataimg>
+<dataimg id="i47" src="https://i.imgur.com/mqWF3Ve.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i50.image.html:image/html-->
@@ -2513,11 +2513,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 1AX7HrW.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: 9ecjyFC.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
+name: lD41x9L.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i47.slice-image.meta:slice-image/meta.1*/
-name: tXUY4T1.jpg; fileId: ; sourceTypeId: externalUrl;
+name: mqWF3Ve.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
