--- a/Miami Dade College/Fade_320x480.html
+++ b/Miami Dade College/Fade_320x480.html
@@ -71,7 +71,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/eN8hAEy.jpg");
+            background: url("https://i.imgur.com/izrQ9aW.jpg");
             background-size: cover;
           
         }
@@ -188,18 +188,18 @@
         .item-1 {
             z-index: 4;
             opacity: 1;
-            animation: fade 16s infinite;
-            -webkit-animation: fade 22s infinite;
+            animation: fade 14s infinite;
+            -webkit-animation: fade 14s infinite;
         }
 
         .item-2 {
-            animation: fade2 16s infinite;
-            -webkit-animation: fade2 22s infinite;
+            animation: fade2 14s infinite;
+            -webkit-animation: fade2 14s infinite;
         }
 
         .item-3 {
-            animation: fade3 16s infinite;
-            -webkit-animation: fade3 22s infinite;
+            animation: fade3 14s infinite;
+            -webkit-animation: fade3 14s infinite;
         }
 
         @keyframes fade {
