--- a/Shell F1/hover-text-big3.html
+++ b/Shell F1/hover-text-big3.html
@@ -117,7 +117,7 @@
 
             <div class="details">
                  <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/ETQFu8LbXNapSQTo8" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/fxFNR9f.png"> </a></div>
+                <a href="https://goo.gl/maps/ETQFu8LbXNapSQTo8" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/xSRfIBS.png"> </a></div>
 
              
 
