--- a/DHL2/Cube.html
+++ b/DHL2/Cube.html
@@ -967,7 +967,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.logistics.dhl/mx-es/home.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/biB8b94T33jNGqGG6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i232.image.js:image/base/js*/
@@ -991,7 +991,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i4').addEventListener('click', function(e){
     /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 /*#/#*//*#i5.i223.image.js:image/base/js*/
@@ -1013,7 +1013,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i5').addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*/
 });
 /*#/#*//*#i6.i60.image.js:image/base/js*/
@@ -1024,7 +1024,7 @@ document.getElementById('i5').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.logistics.dhl/mx-es/home.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/biB8b94T33jNGqGG6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i230.image.js:image/base/js*/
@@ -1048,7 +1048,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i6').addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 /*#/#*//*#i229.visibility.js:visibility/js*/
