--- a/DHL2/slider.html
+++ b/DHL2/slider.html
@@ -38,12 +38,12 @@
           
             .cta {
             position: absolute;
-            bottom: 85px;
+            bottom: 65px;
             width: 170px;
             line-height: 1.3em;
             z-index: 5;
             margin-left: 60px;         
-            background-color: #ffd300;
+            background-color: ffd300;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -206,12 +206,12 @@
 </head>
 <body class="dhll" style="margin:0px;">
 	 <div class="te-container">
-     <a href="https://www.logistics.dhl/mx-es/home.html" target="_blank">
+     <a href="https://goo.gl/maps/biB8b94T33jNGqGG6" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: black;">¡Amplía tus horizontes!</span></div>
+              <div class="cta" > <img src="https://i.imgur.com/go9Sxd8.png" style="height: 45px;"></div>
                 <div class="te-images"> 
                 <img src="https://i.imgur.com/Fs6Ij0q.jpg" alt="" /> 
-                <img src="https://i.imgur.com/Aa8OnTk.jpg" alt="" /> 
+                <img src="https://i.imgur.com/jlgreiP.png" alt="" /> 
                 <img src="https://i.imgur.com/rQNfJmi.jpg" alt="" /> </div>
                 <div class="te-cover"> 
                 <img src="https://i.imgur.com/Fs6Ij0q.jpg" alt="" /> </div>
