--- a/BCP2/300x250/05cuentailimitada.html
+++ b/BCP2/300x250/05cuentailimitada.html
@@ -2258,6 +2258,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i54" src="https://i.imgur.com/NQbbQh3.jpg"></dataimg>
 <!--#/#--><!--#i2.i55.slice-image.html:slice-image/html.1-->
 <dataimg id="i55" src="https://i.imgur.com/ugqoyUb.jpg"></dataimg>
+<!--#/#--><!--#i2.i56.slice-image.html:slice-image/html.1-->
+<dataimg id="i56" src="https://i.imgur.com/psTD8uF.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2318,6 +2320,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i55.slice-image.js:slice-image/base/js.1*/
 
+/*#/#*//*#i2.i56.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2373,6 +2377,9 @@ name: NQbbQh3.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i55.slice-image.meta:slice-image/meta.1*/
 name: ugqoyUb.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i56.slice-image.meta:slice-image/meta.1*/
+name: psTD8uF.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
