--- a/BCP2/300x250/04CtaPremioVentanillaVenetian300x250.html
+++ b/BCP2/300x250/04CtaPremioVentanillaVenetian300x250.html
@@ -2257,7 +2257,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i54.slice-image.html:slice-image/html.1-->
 <dataimg id="i54" src="https://i.imgur.com/XYk1Uyn.png"></dataimg>
 <!--#/#--><!--#i2.i55.slice-image.html:slice-image/html.1-->
-<dataimg id="i55" src="https://i.imgur.com/KLwnX7A.jpg"></dataimg>
+<dataimg id="i55" src="https://i.imgur.com/psTD8uF.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2372,7 +2372,7 @@ customName: false;
 name: XYk1Uyn.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i55.slice-image.meta:slice-image/meta.1*/
-name: KLwnX7A.jpg; fileId: ; sourceTypeId: externalUrl;
+name: psTD8uF.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
