--- a/BCP2/300x250/05cuentailimitada.html
+++ b/BCP2/300x250/05cuentailimitada.html
@@ -2249,7 +2249,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/R6q5qlU.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/EgZ5HNN.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/LB2Qxnf.jpg"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
@@ -2366,7 +2366,7 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: R6q5qlU.jpg; fileId: ; sourceTypeId: externalUrl;
+name: EgZ5HNN.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: LB2Qxnf.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
