--- a/Falabella2/Europa/Venetian320x480.html
+++ b/Falabella2/Europa/Venetian320x480.html
@@ -2141,11 +2141,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 46px;
-        -ms-transform: translate(0, 0) translate(232px, 428px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(232px, 428px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(232px, 428px) rotate(0deg);
-        transform: translate(0, 0) translate(232px, 428px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 88px; height: 44px;
+        -ms-transform: translate(0, 0) translate(225px, 431px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(225px, 431px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(225px, 431px) rotate(0deg);
+        transform: translate(0, 0) translate(225px, 431px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2228,37 +2228,37 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: PFBeauSansProSeBold; font-size: 25px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 304px; height: 60px;
-        -ms-transform: translate(0, 0) translate(8px, 379px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 379px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 379px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 379px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 60px;
+        -ms-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
+        transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
 }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 214px; height: 57px;
-        -ms-transform: translate(0, 0) translate(54px, 322px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(54px, 322px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(54px, 322px) rotate(0deg);
-        transform: translate(0, 0) translate(54px, 322px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 161px; height: 43px;
+        -ms-transform: translate(0, 0) translate(76px, 331px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(76px, 331px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(76px, 331px) rotate(0deg);
+        transform: translate(0, 0) translate(76px, 331px) rotate(0deg);
 }
 /*#/#*//*#i58.shape.css:shape/base/css*/
 #i58 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.2*/
-#i58 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 318px; height: 478px;
+        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 28px; height: 27px;
+#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
         -ms-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
@@ -2267,7 +2267,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i54.image.css:image/base/css*/
 #i54 { opacity: 1; }
 /*#/#*//*#i54.i55.positioning.css:positioning/base/css.2*/
-#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 29px; height: 28px;
+#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
         -ms-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
@@ -2276,12 +2276,24 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
 /*#/#*//*#i56.i57.positioning.css:positioning/base/css.2*/
-#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 28px; height: 28px;
+#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
         -ms-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
         transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
 }
+/*#/#*//*#i72.font-local.css:font/font-local/css*/
+/*#i72.i73.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'PFBeauSansProSeBold';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/PFBeauSansProSeBold.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2293,27 +2305,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/J7oVA3a.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/spsQndn.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/SQHRbP0.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/d3XhSiQ.png"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
-<dataimg id="i37" src="https://i.imgur.com/sc97Vob.jpg"></dataimg>
+<dataimg id="i37" src="https://i.imgur.com/sPNl6JU.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/LpaICRb.jpg"/>
+<img id="i16" src="https://i.imgur.com/D1hmq7w.png"/>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">Haz todo lo que te gusta y vive sin límites a cada momento.</div>
+<div id="i50">No esperes más, viaja hoy.</div>
 <!--#/#--><!--#i68.image.html:image/html-->
-<img id="i68" src="https://i.imgur.com/LjwiPqE.png"/>
+<img id="i68" src="https://i.imgur.com/fY0p01i.png"/>
 <!--#/#--><!--#i58.shape.html:shape/html-->
 <div id="i58"></div>
 <!--#/#--><!--#i52.image.html:image/html-->
-<img id="i52" src="https://i.imgur.com/buzMvIg.png"/>
+<img id="i52" src="https://i.imgur.com/a0n5edL.png"/>
 <!--#/#--><!--#i54.image.html:image/html-->
-<img id="i54" src="https://i.imgur.com/iBNqKO7.png"/>
+<img id="i54" src="https://i.imgur.com/ftJEChb.png"/>
 <!--#/#--><!--#i56.image.html:image/html-->
-<img id="i56" src="https://i.imgur.com/jyuoZas.png"/>
+<img id="i56" src="https://i.imgur.com/s6P43zI.png"/>
+<!--#/#--><!--#i72.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2386,7 +2399,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2403,7 +2416,7 @@ var el = document.getElementById('i54');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2420,7 +2433,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2435,7 +2448,7 @@ var el = document.getElementById('i58');
 
 el.addEventListener('click', function(e){
     /*#i60.i61.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2468,11 +2481,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: J7oVA3a.gif; fileId: ; sourceTypeId: externalUrl;
+name: spsQndn.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: SQHRbP0.jpg; fileId: ; sourceTypeId: externalUrl;
+name: d3XhSiQ.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
-name: sc97Vob.jpg; fileId: ; sourceTypeId: externalUrl;
+name: sPNl6JU.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -2482,7 +2495,7 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: Haz todo lo que te gusta y vive sin límites a cada momento.; customName: false;
+name: No esperes más, viaja hoy.; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.image.meta:image/meta*/
@@ -2493,7 +2506,7 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i58.shape.meta:shape/meta*/
 name: LINK;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i52.image.meta:image/meta*/
 name: F; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -2509,4 +2522,6 @@ name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i56.i57.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i72.font.meta:font/meta*/
+name: Web Font: PFBeauSansProSeBold; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
