--- a/Falabella2/Turquía/Venetian320x480.html
+++ b/Falabella2/Turquía/Venetian320x480.html
@@ -2228,13 +2228,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: PFBeauSansProSeBold; font-size: 25px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: PFBeauSansProSeBold; font-size: 31px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 60px;
-        -ms-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 296px; height: 60px;
+        -ms-transform: translate(0, 0) translate(12px, 385px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(12px, 385px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(12px, 385px) rotate(0deg);
+        transform: translate(0, 0) translate(12px, 385px) rotate(0deg);
 }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
@@ -2305,17 +2305,17 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/spsQndn.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/zStY5mn.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/d3XhSiQ.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/avZCLXZ.png"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
-<dataimg id="i37" src="https://i.imgur.com/sPNl6JU.png"></dataimg>
+<dataimg id="i37" src="https://i.imgur.com/AAeGTPL.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/D1hmq7w.png"/>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">No esperes más, viaja hoy.</div>
+<div id="i50">Es hora de viajar.</div>
 <!--#/#--><!--#i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/fY0p01i.png"/>
 <!--#/#--><!--#i58.shape.html:shape/html-->
@@ -2399,7 +2399,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2416,7 +2416,7 @@ var el = document.getElementById('i54');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2433,7 +2433,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2448,7 +2448,7 @@ var el = document.getElementById('i58');
 
 el.addEventListener('click', function(e){
     /*#i60.i61.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2481,11 +2481,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: spsQndn.gif; fileId: ; sourceTypeId: externalUrl;
+name: zStY5mn.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: d3XhSiQ.png; fileId: ; sourceTypeId: externalUrl;
+name: avZCLXZ.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
-name: sPNl6JU.png; fileId: ; sourceTypeId: externalUrl;
+name: AAeGTPL.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -2495,7 +2495,7 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: No esperes más, viaja hoy.; customName: false;
+name: Es hora de viajar.; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.image.meta:image/meta*/
