--- a/Falabella2/Turquía/Fade300x250.html
+++ b/Falabella2/Turquía/Fade300x250.html
@@ -72,15 +72,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/fNYipHM.jpg)
+            background-image: url(https://i.imgur.com/oujUQze.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/i3XflNC.jpg)
+            background-image: url(https://i.imgur.com/CvxrUSE.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/GXK9PFj.gif)
+            background-image: url(https://i.imgur.com/XFSm57q.gif)
 
         }
 
