--- a/Falabella2/Europa/Fade300x250.html
+++ b/Falabella2/Europa/Fade300x250.html
@@ -319,7 +319,7 @@
                     <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/a0n5edL.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https:whatsapp:https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="block">
+                            <a class="shared" href="whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="block">
                             <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/ftJEChb.png" title="compartir en whatsapp" width="22" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status=https:whatsapp:https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="block">
