--- a/Falabella2/Turquía/Fade300x250.html
+++ b/Falabella2/Turquía/Fade300x250.html
@@ -293,10 +293,10 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta"> <a href="https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="_blank">
+        <div class="cta"> <a href="https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106" target="_blank">
     <img src="https://i.imgur.com/fY0p01i.png" style="height: 45px;"></a></div>   
 
-        <a href="https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="_blank">
+        <a href="https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
@@ -316,13 +316,13 @@
 
                 <div id="botones-para-compartir"> 
                    
-                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106"  target="block">    
+                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/a0n5edL.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https:whatsapp:https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="block">
+                            <a class="shared" href="whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106" target="block">
                             <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/ftJEChb.png" title="compartir en whatsapp" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https:whatsapp:https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_europa_0106" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https:whatsapp:https:https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/turquia/?utm_source=on_native&utm_medium=paid&utm_campaign=llego_el_verano&utm_content=landing_turquia_0106" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/s6P43zI.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
