--- a/Falabella2/Europa/Venetian320x480.html
+++ b/Falabella2/Europa/Venetian320x480.html
@@ -2228,13 +2228,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: PFBeauSansProSeBold; font-size: 25px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: PFBeauSansProSeBold; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 60px;
-        -ms-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
-        transform: translate(0, 0) translate(42px, 379px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 264px; height: 60px;
+        -ms-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 379px) rotate(0deg);
 }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
@@ -2258,7 +2258,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
+#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 28px; height: 29px;
         -ms-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(11px, 446px) rotate(0deg);
@@ -2267,7 +2267,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i54.image.css:image/base/css*/
 #i54 { opacity: 1; }
 /*#/#*//*#i54.i55.positioning.css:positioning/base/css.2*/
-#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
+#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 28px; height: 29px;
         -ms-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(46px, 446px) rotate(0deg);
@@ -2276,7 +2276,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
 /*#/#*//*#i56.i57.positioning.css:positioning/base/css.2*/
-#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 30px; height: 31px;
+#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 28px; height: 29px;
         -ms-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(81px, 446px) rotate(0deg);
@@ -2315,7 +2315,8 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/D1hmq7w.png"/>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">No esperes más, viaja hoy.</div>
+<div id="i50">Es hora de viajar.
+No esperes más, viaja hoy.</div>
 <!--#/#--><!--#i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/fY0p01i.png"/>
 <!--#/#--><!--#i58.shape.html:shape/html-->
@@ -2495,7 +2496,7 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: No esperes más, viaja hoy.; customName: false;
+name: Es hora de viajar. No esperes más, viaja hoy.; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.image.meta:image/meta*/
