--- a/Falabella2/Turquía/Fade300x250.html
+++ b/Falabella2/Turquía/Fade300x250.html
@@ -300,7 +300,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>¡Es hora de viajar, NO ESPERES MAS!</b><br>VIAJA HOY.</br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>¡Es hora de viajar, NO ESPERES MÁS!</b><br>VIAJA HOY.</br></span>
                </div>
 
                 <div class="cta" > <img src="" style="height: 45px;"></div>
