--- a/HyundaiNLINE/ZoomExp300x600.html
+++ b/HyundaiNLINE/ZoomExp300x600.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ZoomExp 300x600</title>
-    <link href="https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i" rel=stylesheet>
+    <link href="https://fonts.googleapis.com/css?family=Trebuchet MS;" rel=stylesheet>
 
 
 <style>
@@ -74,7 +74,7 @@ a {text-decoration: none;}
             margin-left: 0px;
             text-align:center;
             padding-left: 4px;
-            text-decoration: Trebuchet MS;
+            font-family: Trebuchet MS;
             width: 95%;
         }
 
@@ -84,6 +84,7 @@ a {text-decoration: none;}
             width:95%;
             font-weight: 600;
             text-align: center;
+             font-family: Trebuchet MS;
         }
 
         .zoom .ism_text_bold,
@@ -101,6 +102,7 @@ a {text-decoration: none;}
             font-weight: 900;
             line-height: 1.1;
              text-decoration: none;
+              font-family: Trebuchet MS;
            
         }
 
@@ -173,8 +175,8 @@ a {text-decoration: none;}
     </li>
   </ol>
 </div>
-<div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:24px;  text-decoration: none;">Nuevo TUCSON N Line.</span><br>
- <div class="ism_text"> <span class=" ism_text" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">Disfruta de tu Hyundai Tucson N Line Hibrido 48V, con acabado deportivo.</span><br>
+<div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:24px;  text-decoration: none;">Nuevo TUCSON N Line.</span><br>
+ <div class="ism_text"> <span class=" ism_text" style="font-family:Trebuchet MS; color:#000000; font-size:16px;  text-decoration: none;">Disfruta de tu Hyundai Tucson N Line Hibrido 48V, con acabado deportivo.</span><br>
 
                    
                    </div>
