Tamaño de fuentes y volante añadido

--- a/HyundaiNLINE/_HYUNDAI_TUCSON_ NSeries/main/Venetian320x480.html
+++ b/HyundaiNLINE/_HYUNDAI_TUCSON_ NSeries/main/Venetian320x480.html
@@ -2228,7 +2228,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 304px; height: 60px;
         -ms-transform: translate(0, 0) translate(8px, 394px) rotate(0deg);
@@ -2247,13 +2247,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i72.text.css:text/base/css*/
-#i72 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 30px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i72 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
 #i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 313px; height: 41px;
-        -ms-transform: translate(0, 0) translate(4px, 358px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(4px, 358px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(4px, 358px) rotate(0deg);
-        transform: translate(0, 0) translate(4px, 358px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(4px, 365px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 365px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 365px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 365px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2271,6 +2271,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i5" src="https://i.imgur.com/Xchbd22.jpg"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
 <dataimg id="i37" src="https://i.imgur.com/3Iqvm9a.gif"></dataimg>
+<!--#/#--><!--#i2.i74.slice-image.html:slice-image/html.1-->
+<dataimg id="i74" src="https://i.imgur.com/UXGWwXd.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2333,6 +2335,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i37.slice-image.js:slice-image/base/js.1*/
 
+/*#/#*//*#i2.i74.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2387,6 +2391,9 @@ name: if1T1Cu.jpg; fileId: ; sourceTypeId: externalUrl;
 name: Xchbd22.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
 name: 3Iqvm9a.gif; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i74.slice-image.meta:slice-image/meta.1*/
+name: UXGWwXd.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
