--- a/HyundaiNLINE/HYUNDAI_NSeries/main/Cube.html
+++ b/HyundaiNLINE/HYUNDAI_NSeries/main/Cube.html
@@ -644,22 +644,22 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i216.text.css:text/base/css*/
-#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 282px; height: 40px;
-        -ms-transform: translate(0, 0) translate(10px, 190px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(10px, 190px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(10px, 190px) rotate(0deg);
-        transform: translate(0, 0) translate(10px, 190px) rotate(0deg);
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 40px;
+        -ms-transform: translate(0, 0) translate(14px, 194px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 194px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 194px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 194px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 260px; height: 36px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 55px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 55px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 55px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 55px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 62px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 62px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 62px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 62px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -704,22 +704,22 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i218.text.css:text/base/css*/
-#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: FrutigerLTStd-Roman; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: FrutigerLTStd-Roman; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i218.i219.positioning.css:positioning/base/css.1*/
 #i218 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 278px; height: 46px;
-        -ms-transform: translate(0, 0) translate(11px, 189px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 189px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 189px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 189px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(11px, 194px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 194px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 194px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 194px) rotate(0deg);
 }
 /*#/#*//*#i5.i187.text.css:text/base/css*/
-#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i187.i188.positioning.css:positioning/base/css.1*/
 #i187 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 256px; height: 40px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 59px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 59px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 59px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 59px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
 }
 /*#/#*//*#i5.i223.image.css:image/base/css*/
 #i223 { opacity: 1; }
@@ -771,22 +771,22 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i220.text.css:text/base/css*/
-#i220 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i220 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i220.i221.positioning.css:positioning/base/css.1*/
 #i220 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 256px; height: 33px;
-        -ms-transform: translate(0, 0) translate(22px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(22px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(22px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(22px, 160px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(22px, 170px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(22px, 170px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(22px, 170px) rotate(0deg);
+        transform: translate(0, 0) translate(22px, 170px) rotate(0deg);
 }
 /*#/#*//*#i6.i193.text.css:text/base/css*/
-#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i193.i194.positioning.css:positioning/base/css.1*/
-#i193 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 281px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
+#i193 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 276px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
