--- a/Chicco Tiendas/Perisur/CubeMix.html
+++ b/Chicco Tiendas/Perisur/CubeMix.html
@@ -928,7 +928,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i252.text.html:text/html-->
 <div id="i252">Tu bebé merece lo mejor</div>
 <!--#/#--><!--#i6.i254.text.html:text/html-->
-<div id="i254">Te esperamos en nuestras tiendas Chicco</div>
+<div id="i254">Te esperamos en nuestras tiendas Chicco.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
